# securenet-vpn

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.migrate  Dockerfile.server  README.md  SECURITY.md  docker-compose.yml  render.yaml  securenet_deploy_key  securenet_deploy_key.pub
.github/workflows/: deploy.yml
cloud-deploy/: cloud-deploy.sh  prometheus.yml
config/: client.toml.example  server.toml.example
crates/securenet-api/: Cargo.toml
crates/securenet-api/migrations/: 0001_initial_schema.sql  0002_pending_peers.sql  0003_seed_servers.sql  0004_remove_server_pubkey_unique.sql
crates/securenet-api/src/: main.rs
crates/securenet-api/src/handlers/: mod.rs
crates/securenet-api/src/middleware/: mod.rs
crates/securenet-client/: Cargo.toml
crates/securenet-client/src/: main.rs
crates/securenet-core/: Cargo.toml
crates/securenet-core/src/: config.rs  crypto.rs  error.rs  lib.rs  tun_device.rs  tunnel.rs
crates/securenet-server/: Cargo.toml
crates/securenet-server/src/: main.rs
docs/: architecture.md
scripts/: generate-keys.sh  install-client.sh  securenet.service  setup.sh
