[package]
name = "securenet-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
securenet-core = { path = "../securenet-core" }
tokio.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
uuid.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
dotenvy.workspace = true
