[package]
name = "securenet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
boringtun.workspace = true
tun.workspace = true
ring.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake2.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
hex.workspace = true
bytes.workspace = true
ipnetwork.workspace = true
pnet.workspace = true
socket2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
hmac.workspace = true
