[package]
name = "securenet-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
securenet-core = { path = "../securenet-core" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
prometheus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
dotenvy.workspace = true
axum.workspace = true
